--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Shabdkosh</string>
     <string name="string_synonyms">Synonyms:</string>
     <string name="string_id">%d.</string>
+    <string name="search_hint">Search...</string>
+    <string name="content_desc_search">Search the word to get its mean</string>
 </resources>
