--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="content_desc_search">Search the word to get its mean</string>
     <string name="text_no_recent">No Recent Word Found!!!</string>
     <string name="no_favourite_word_found">No Favourite Word Found!!!</string>
+    <string name="something_went_wrong">Something went wrong!!!</string>
 </resources>
