fix: empty list error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="something_went_wrong">Something went wrong!!!</string>
     <string name="tab_recent">Recent</string>
     <string name="tab_favourite">Favourite</string>
+    <string name="error_text_not_load">Wait for Loading the Data</string>
 
 </resources>
